--- a/package.json
+++ b/package.json
@@ -16,15 +16,18 @@
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "^13.5.6",
     "axios": "^1.6.8",
+    "clsx": "^2.1.1",
     "crisp-sdk-web": "^1.0.22",
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.19",
     "form-data": "^4.0.0",
+    "framer-motion": "^12.23.6",
     "lucide-react": "^0.525.0",
+    "magic-ui-react": "^1.3.4",
     "mongodb": "^5.9.2",
     "mongoose": "^7.6.10",
-    "next": "^14.1.4",
-    "next-auth": "^4.24.7",
+    "next": "^15.3.5",
+    "next-auth": "^4.24.11",
     "next-sitemap": "^4.2.3",
     "nextjs-toploader": "^1.6.11",
     "nodemailer": "^6.9.13",
@@ -35,6 +38,10 @@
     "react-tooltip": "^5.26.3",
     "resend": "^4.0.1",
     "stripe": "^13.11.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwindcss-animate": "^1.0.7",
+    "three": "^0.178.0",
+    "vanta": "^0.5.24",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -45,6 +52,7 @@
     "@types/react": "^18.2.73",
     "@types/react-dom": "^18.2.23",
     "@types/react-syntax-highlighter": "^15.5.11",
+    "@types/three": "^0.178.1",
     "autoprefixer": "^10.4.19",
     "daisyui": "^4.10.1",
     "postcss": "^8.4.38",
